# RayTracer

./: AmbientLightSource.cpp  AmbientLightSource.h  CMakeLists.txt  Camera.cpp  Camera.h  Colour.cpp  Colour.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Direction.cpp  Direction.h  DirectionalLightSource.cpp  DirectionalLightSource.h  Doxyfile  ImageDisplay.cpp  ImageDisplay.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  NonCopyable.h  Normal.cpp  Normal.h  Object.cpp  Object.h  PinholeCamera.cpp  PinholeCamera.h  Plane.cpp  Plane.h  Point.cpp  Point.h  PointLightSource.cpp  PointLightSource.h  README.md  Ray.h  RayIntersection.h  (+22 more)
docs/: ._html
docs/html/: .__ambient_light_source_8cpp.html  .__ambient_light_source_8h.html  .__ambient_light_source_8h_source.html  .__camera_8cpp.html  .__camera_8h.html  .__camera_8h_source.html  .__colour_8cpp.html  .__colour_8h.html  .__colour_8h_source.html  .__cube_8cpp.html  .__cube_8h.html  .__cube_8h_source.html  .__cylinder_8cpp.html  .__cylinder_8h.html  .__cylinder_8h_source.html  .__direction_8cpp.html  .__direction_8h.html  .__direction_8h_source.html  .__directional_light_source_8cpp.html  .__directional_light_source_8h.html  .__directional_light_source_8h_source.html  .__image_display_8cpp.html  .__image_display_8h.html  .__image_display_8h_source.html  .__light_source_8cpp.html  .__light_source_8h.html  .__light_source_8h_source.html  .__material_8cpp.html  .__material_8h.html  .__material_8h_source.html  .__matrix_8cpp.html  .__matrix_8h.html  .__matrix_8h_source.html  .__normal_8cpp.html  (+348 more)
(+310 files in other folders)
